--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ambaji Media</title>
-    <link rel="shortcut icon" href="assets/css/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/logo/logo_w.jpg" type="image/x-icon">
 
     <!-- CSS Files -->
     <link rel="stylesheet" href="assets/css/animate.css">
