--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                         <div class="event__item">
                             <div class="event__inner">
                                 <div class="event__thumb">
-                                    <a href="event-single.html"><img src="assets/images/event/07.jpg"
+                                    <a href="#"><img src="assets/images/event/07.jpg"
                                             alt="event thumb"></a>
                                     <div class="event__thumb-date">
                                         <h6>09</h6>
@@ -575,7 +575,7 @@
                                     </div>
                                 </div>
                                 <div class="event__content">
-                                    <a href="event-single.html">
+                                    <a href="#">
                                         <h5>Open Rededication</h5>
                                     </a>
                                     <div class="event__metapost">
@@ -609,7 +609,7 @@
                         <div class="event__item">
                             <div class="event__inner">
                                 <div class="event__thumb">
-                                    <a href="event-single.html"><img src="assets/images/event/08.jpg"
+                                    <a href="#"><img src="assets/images/event/08.jpg"
                                             alt="event thumb"></a>
                                     <div class="event__thumb-date">
                                         <h6>09</h6>
@@ -617,7 +617,7 @@
                                     </div>
                                 </div>
                                 <div class="event__content">
-                                    <a href="event-single.html">
+                                    <a href="#">
                                         <h5>Big Event This Year</h5>
                                     </a>
                                     <div class="event__metapost">
@@ -651,7 +651,7 @@
                         <div class="event__item">
                             <div class="event__inner">
                                 <div class="event__thumb">
-                                    <a href="event-single.html"><img src="assets/images/event/09.jpg"
+                                    <a href="#"><img src="assets/images/event/09.jpg"
                                             alt="event thumb"></a>
                                     <div class="event__thumb-date">
                                         <h6>09</h6>
@@ -659,7 +659,7 @@
                                     </div>
                                 </div>
                                 <div class="event__content">
-                                    <a href="event-single.html">
+                                    <a href="#">
                                         <h5>Church Evert</h5>
                                     </a>
                                     <div class="event__metapost">
@@ -1124,7 +1124,7 @@
                             <div class="donaterange__bars" data-percent="60%">
                                 <div class="donaterange__bar"></div>
                             </div>
-                            <a href="causes.html" class="default-btn move-right"><span>Donate <i
+                            <a href="#" class="default-btn move-right"><span>Donate <i
                                         class="fas fa-heart"></i></span></a>
                         </div>
                     </div>
@@ -1378,11 +1378,11 @@
                                 <div class="footer__post-item">
                                     <div class="footer__post-inner">
                                         <div class="footer__post-thumb">
-                                            <a href="blog-single.html"><img src="assets/images/footer/post/01.jpg"
+                                            <a href="#"><img src="assets/images/footer/post/01.jpg"
                                                     alt="footer post"></a>
                                         </div>
                                         <div class="footer__post-content">
-                                            <a href="blog-single.html">
+                                            <a href="#">
                                                 <h6>Collaboratively Coordinate.</h6>
                                             </a>
                                             <p><i class="far fa-calendar-alt"></i> 10 January, 2022</p>
@@ -1392,11 +1392,11 @@
                                 <div class="footer__post-item">
                                     <div class="footer__post-inner">
                                         <div class="footer__post-thumb">
-                                            <a href="blog-single.html"><img src="assets/images/footer/post/02.jpg"
+                                            <a href="#"><img src="assets/images/footer/post/02.jpg"
                                                     alt="footer post"></a>
                                         </div>
                                         <div class="footer__post-content">
-                                            <a href="blog-single.html">
+                                            <a href="#">
                                                 <h6>Quickly Develop Exceptional</h6>
                                             </a>
                                             <p><i class="far fa-calendar-alt"></i> 10 January, 2022</p>
@@ -1406,11 +1406,11 @@
                                 <div class="footer__post-item">
                                     <div class="footer__post-inner">
                                         <div class="footer__post-thumb">
-                                            <a href="blog-single.html"><img src="assets/images/footer/post/03.jpg"
+                                            <a href="#"><img src="assets/images/footer/post/03.jpg"
                                                     alt="footer post"></a>
                                         </div>
                                         <div class="footer__post-content">
-                                            <a href="blog-single.html">
+                                            <a href="#">
                                                 <h6>Why you need Peace WordPress Theme?</h6>
                                             </a>
                                             <p><i class="far fa-calendar-alt"></i> 10 January, 2022</p>
@@ -1448,8 +1448,7 @@
                             alt="footer logo"></a>
                     </div>
                     <div class="footer__bottom-content">
-                        <p>Copyright &copy; 2024 <a href="/">Ambaji Media</a> | Developed by <a
-                                href="https://mayurchauhan.vercel.app/">Mayur Chauhan</a></p>
+                        <p>Copyright &copy; 2024 <a href="/">Ambaji Media</a></p>
                     </div>
                 </div>
             </div>
