--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <link rel="stylesheet" href="assets/css/customstyles.css">
     <!-- <link rel="stylesheet" href="assets/css/services.css"> -->
     <!-- Bootstrap Icons (if needed) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
     <!-- Bootstrap JS Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -99,16 +99,20 @@
                                 alt="logo"></a>
                     </div>
                     <div class="header__bar">
+                        <!-- Menu Bar Toggle -->
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menubar"
                             aria-controls="menubar" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
+                    
+                        <!-- Info Bar Toggle -->
                         <button class="navbar-toggler header__bar-info" type="button" data-bs-toggle="collapse"
                             data-bs-target="#menubar2" aria-controls="menubar2" aria-expanded="false"
                             aria-label="Toggle navigation">
                             <span class="fas fa-info"></span>
                         </button>
                     </div>
+                    
                     <div class="header__menu navbar-expand-xl">
                         <div class="collapse navbar-collapse" id="menubar">
                             <ul>
