--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                         <ul>
                                             <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                             <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                            <li><a href="https://www.instagram.com/ambajimediaa/"><i class="fab fa-instagram"></i></a></li>
                                             <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
                                         </ul>
                                     </div>
@@ -147,7 +147,7 @@
 
 
     <!-- ================> Banner section start here <================== -->
-    <div class="banner__slider banner-style3 overflow-hidden">
+    <div class="banner__slider banner-style2 overflow-hidden">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <div class="banner" style="background-image: url(assets/images/hero/1.jpg);">
@@ -1315,7 +1315,7 @@
                         </a>
                     </li>
                     <li class="social__list-instagram">
-                        <a href="#">
+                        <a href="https://www.instagram.com/ambajimediaa/">
                             <i class="fab fa-instagram"></i>
                             <span>instagram</span>
                         </a>
@@ -1333,24 +1333,32 @@
     <footer class="footer">
         <div class="footer__top padding--top padding--bottom">
             <div class="container">
-                <div class="row g-4">
-                    <div class="col-xl-3 col-sm-6 col-12">
+                <div class="row g-4 d-flex gap-5 justify-content-center">
+                    <div class="col-xl-6 col-sm-6 col-12">
                         <div class="footer__about">
                             <div class="section__header">
-                                <h2>About Peace</h2>
+                                <h2>About Us</h2>
                             </div>
                             <div class="section__wrapper">
-                                <div class="footer__about-thumb">
-                                    <img src="assets/images/footer/about/01.jpg" alt="footer thumb" class="w-100">
-                                </div>
-                                <div class="footer__about-contet">
-                                    <p>Dramatically strategize economically sound action items for e-business niches.
-                                        Quickly re-engineer 24/365 potentialities before.</p>
+                                <div class="row">
+                                    <!-- Column 1: Logo (narrower column) -->
+                                    <div class="col-4">
+                                        <div class="footer__about-thumb">
+                                            <img src="assets/images/logo/ambajimedia_logo.png" alt="footer thumb" class="w-100">
+                                        </div>
+                                    </div>
+                                    <!-- Column 2: Content (wider column) -->
+                                    <div class="col-8">
+                                        <div class="footer__about-content">
+                                            <p>Dramatically strategize economically sound action items for e-business niches. Quickly re-engineer 24/365 potentialities before.</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-sm-6 col-12">
+                                      
+                    <!-- <div class="col-xl-3 col-sm-6 col-12">
                         <div class="footer__tags">
                             <div class="section__header">
                                 <h2>Post Tag</h2>
@@ -1372,8 +1380,8 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-xl-3 col-sm-6 col-12">
+                    </div> -->
+                    <!-- <div class="col-xl-3 col-sm-6 col-12">
                         <div class="footer__post">
                             <div class="section__header">
                                 <h2>Recent Post</h2>
@@ -1423,24 +1431,33 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-xl-3 col-sm-6 col-12">
                         <div class="footer__links">
                             <div class="section__header">
                                 <h2>Useful Links</h2>
                             </div>
                             <div class="section__wrapper">
-                                <ul>
-                                    <li><a href="#">Log in</a></li>
-                                    <li><a href="#">Entries <abbr title="RSS">RSS</abbr></a></li>
-                                    <li><a href="#">Comments <abbr title="RSS">RSS</abbr></a></li>
-                                    <li><a href="#">WordPress.org</a></li>
-                                    <li><a href="#">Google</a></li>
-                                    <li><a href="#">Template</a></li>
-                                </ul>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <ul class="list-unstyled">
+                                            <li><a href="#">Home</a></li>
+                                            <li><a href="#">Services</a></li>
+                                            <li><a href="#">Video Gallery</a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-6">
+                                        <ul class="list-unstyled">
+                                            <li><a href="#">Events</a></li>
+                                            <li><a href="#">Contact Us</a></li>
+                                            <li><a href="#">Our Location</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
+                                   
                 </div>
             </div>
         </div>
