added banner, and event section

--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
                                                     <i class="fa-brands fa-threads"></i>
                                                 </a>
                                             </li>
-                                            <li>
+                                            <!-- <li>
                                                 <a href="#" target="_blank">
                                                     <i class="fab fa-facebook-f"></i>
                                                 </a>
-                                            </li>
+                                            </li> -->
                                         </ul>
                                     </div>
                                 </div>
@@ -532,7 +532,7 @@
                         <div class="event__item">
                             <div class="event__inner">
                                 <div class="event__thumb">
-                                    <iframe loading="lazy" width="350" height="200"
+                                    <iframe loading="lazy" width="100%" height="200"
                                         src="https://www.youtube.com/embed/m2aofkhOfm0?si=ELYgEENsqrEkRfnX"
                                         title="YouTube video player" frameborder="0"
                                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -840,7 +840,7 @@
                                             alt="location thumb">
                                     </div>
                                     <div class="location__info-content">
-                                        <h6>Raj Joshi</h6>
+                                        <h6 class="banner-text" style="font-family: 'DM Sans';">Raj Joshi</h6>
                                         <ul>
                                             <li><b>Contact No:</b>+91 89805 91400</li>
                                             <li><b>Email:</b>raj1492002@gmail.com</li>
@@ -918,12 +918,12 @@
                             <span>Threads</span>
                         </a>
                     </li>
-                    <li class="social__list-facebook">
+                    <!-- <li class="social__list-facebook">
                         <a href="#" target="_blank">
                             <i class="fab fa-facebook-f"></i>
                             <span>Facebook</span>
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
