--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ambaji Media</title>
+    <title>Ambaji Raj Joshi</title>
     <link rel="shortcut icon" href="assets/images/logo/logo_w.jpg" type="image/x-icon">
 
     <!-- CSS Files -->
@@ -789,7 +789,7 @@
         <div class="container">
             <div class="section__header text-center">
                 <h2>Contact Us</h2>
-                <p>We're here to help! Reach out to Ambaji Media for any inquiries, updates, or support. Connect with us
+                <p>We're here to help! Reach out to Ambaji Raj Joshi for any inquiries, updates, or support. Connect with us
                     via the form below.</p>
             </div>
             <div class="section__wrapper">
@@ -955,7 +955,7 @@
                                     <!-- Column 2: Content (wider column) -->
                                     <div class="col-8">
                                         <div class="footer__about-content">
-                                            <p>Welcome to <span class="fw-bold">Ambaji Media</span> – your 24x7 source
+                                            <p>Welcome to <span class="fw-bold">Ambaji Raj Joshi</span> – your 24x7 source
                                                 for the latest news, updates, events, and tourist information about the
                                                 holy town of Ambaji. Stay informed and connected with us!</p>
                                         </div>
@@ -1001,7 +1001,7 @@
                                 alt="footer logo"></a>
                     </div>
                     <div class="footer__bottom-content">
-                        <p>Copyright &copy; 2024 <a href="/">Ambaji Media</a></p>
+                        <p>Copyright &copy; 2024 <a href="/">Ambaji Raj Joshi</a></p>
                     </div>
                 </div>
             </div>
