--- a/index.html
+++ b/index.html
@@ -794,16 +794,17 @@
             </div>
             <div class="section__wrapper">
                 <div class="contact__form">
-                    <form class="d-flex flex-wrap justify-content-between" action="contact.php" id="contact-form"
-                        method="POST">
-                        <input type="text" placeholder="Your Name" id="name" name="name" required="required">
-                        <input type="text" placeholder="Your Email" id="email" name="email" required>
-                        <input class="w-100" type="text" placeholder="Subject" id="subject" name="subject" required>
-                        <textarea placeholder="Your Message" rows="8" name="message" id="message" required></textarea>
-                        <div class="text-center w-100">
-                            <button type="submit" class="default-btn move-right"><span>SEND NOW</span></button>
-                        </div>
-                    </form>
+                        <form class="d-flex flex-wrap justify-content-between" action="https://api.web3forms.com/submit" id="contact-form"
+                            method="POST">
+                            <input type="hidden" name="access_key" value="591f84d3-25b4-4560-829b-738d71d65503">
+                            <input type="text" placeholder="Your Name" id="name" name="name" required="required">
+                            <input type="text" placeholder="Your Email" id="email" name="email" required>
+                            <input class="w-100" type="text" placeholder="Subject" id="subject" name="subject" required>
+                            <textarea placeholder="Your Message" rows="8" name="message" id="message" required></textarea>
+                            <!-- <div class="text-center w-100"> -->
+                                <button type="submit" class="default-btn move-right"><span>SEND NOW</span></button>
+                            <!-- </div> -->
+                        </form>
                     <p class="form-message"></p>
                 </div>
             </div>
