--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
                     <div class="container banner-container">
                         <div class="banner__content ms-lg-auto m-lg-auto text-lg-center">
                             <h2 class="banner-text">Jay Ambe! Embrace the Divine Power of Ambaji</h2>
-                            <p class="banner-text">Join thousands of devotees in offering prayers to Maa Ambe, the symbol
+                            <p class="banner-text">Join thousands of devotees in offering prayers to Maa Ambe, the
+                                symbol
                                 of strength and devotion.</p>
                             <a href="#" class="default-btn move-right"><span class="text-black">Explore more</span></a>
                         </div>
@@ -195,7 +196,8 @@
                     <div class="container">
                         <div class="banner__content ms-lg-auto m-lg-auto text-lg-center">
                             <h2 class="banner-text">Discover the Spiritual Essence of Ambaji</h2>
-                            <p class="banner-text">Experience divine serenity at Ambaji Temple, a place of worship and deep spiritual connection.</p>
+                            <p class="banner-text">Experience divine serenity at Ambaji Temple, a place of worship and
+                                deep spiritual connection.</p>
                             <a href="#" class="default-btn move-right"><span class="text-black">Explore more</span></a>
                         </div>
                     </div>
@@ -206,7 +208,8 @@
                     <div class="container">
                         <div class="banner__content ms-lg-auto m-lg-auto text-lg-center">
                             <h2 class="banner-text">Stay Updated with Ambaji Events</h2>
-                            <p class="banner-text">Get updates on festivals, events, and celebrations at Ambaji throughout the year.</p>
+                            <p class="banner-text">Get updates on festivals, events, and celebrations at Ambaji
+                                throughout the year.</p>
                             <a href="#" class="default-btn move-right"><span class="text-black">Explore more</span></a>
                         </div>
                     </div>
@@ -381,6 +384,21 @@
                     </ul>
                 </div>
                 <div class="row g-0 grid">
+                    <div class="col-xl-2 col-lg-4 col-sm-6 col-12 cate-1">
+                        <div class="gallery__item">
+                            <div class="gallery__inner">
+                                <div class="gallery__thumb">
+                                    <video src="assets/gallery/videos/1.mp4" alt="gallery-thumb"
+                                        class="w-100">
+
+                                </div>
+                                <div class="gallery__content text-center">
+                                    <a href="assets/gallery/videos/1.mp4" data-rel="lightcase"
+                                        class="gallery__icon"><i class="fas fa-play"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-xl-2 col-lg-4 col-sm-6 col-12 cate-1">
                         <div class="gallery__item">
                             <div class="gallery__inner">
@@ -789,22 +807,22 @@
         <div class="container">
             <div class="section__header text-center">
                 <h2>Contact Us</h2>
-                <p>We're here to help! Reach out to Ambaji Raj Joshi for any inquiries, updates, or support. Connect with us
+                <p>We're here to help! Reach out to Ambaji Raj Joshi for any inquiries, updates, or support. Connect
+                    with us
                     via the form below.</p>
             </div>
             <div class="section__wrapper">
                 <div class="contact__form">
-                        <form class="d-flex flex-wrap justify-content-between" action="https://api.web3forms.com/submit" id="contact-form"
-                            method="POST">
-                            <input type="hidden" name="access_key" value="591f84d3-25b4-4560-829b-738d71d65503">
-                            <input type="text" placeholder="Your Name" id="name" name="name" required="required">
-                            <input type="text" placeholder="Your Email" id="email" name="email" required>
-                            <input class="w-100" type="text" placeholder="Subject" id="subject" name="subject" required>
-                            <textarea placeholder="Your Message" rows="8" name="message" id="message" required></textarea>
-                            <!-- <div class="text-center w-100"> -->
-                                <button type="submit" class="default-btn move-right"><span>SEND NOW</span></button>
-                            <!-- </div> -->
-                        </form>
+                    <form class="d-flex flex-wrap justify-content-between" id="contact-form">
+                        <input type="hidden" name="access_key" value="591f84d3-25b4-4560-829b-738d71d65503"> 
+                        <input type="text" placeholder="Your Name" id="name" name="name" required="required">
+                        <input type="text" placeholder="Your Email" id="email" name="email" required>
+                        <input class="w-100" type="text" placeholder="Subject" id="subject" name="subject" required>
+                        <textarea placeholder="Your Message" rows="8" name="message" id="message" required></textarea>
+                        <div class="text-center w-100">
+                            <button type="submit" class="default-btn move-right" id="submit"><span>SEND NOW</span></button>
+                        </div>
+                    </form>
                     <p class="form-message"></p>
                 </div>
             </div>
@@ -820,11 +838,7 @@
                 <div class="col-lg-6 col-12">
                     <div class="location__left">
                         <div class="location__map">
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29084.59255972423!2d72.83607212968157!3d24.326487715589643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395d22f74567e2ff%3A0xba6ee2bdabf61b43!2sAmbaji%2C%20Gujarat%20385110!5e0!3m2!1sen!2sin!4v1726340076096!5m2!1sen!2sin"
-                                width="600" height="350" style="border:0;" allowfullscreen="" loading="lazy"
-                                referrerpolicy="no-referrer-when-downgrade
-                                allowfullscreen="" loading=" lazy"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d228.2819469406636!2d72.85268602157866!3d24.336384876959205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1726424173462!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
@@ -956,7 +970,8 @@
                                     <!-- Column 2: Content (wider column) -->
                                     <div class="col-8">
                                         <div class="footer__about-content">
-                                            <p>Welcome to <span class="fw-bold">Ambaji Raj Joshi</span> – your 24x7 source
+                                            <p>Welcome to <span class="fw-bold">Ambaji Raj Joshi</span> – your 24x7
+                                                source
                                                 for the latest news, updates, events, and tourist information about the
                                                 holy town of Ambaji. Stay informed and connected with us!</p>
                                         </div>
@@ -1010,18 +1025,10 @@
     </footer>
     <!-- ================> Footer section end here <================== -->
 
-
-
-
-
     <!-- scrollToTop start here -->
     <a href="#" class="scrollToTop"><i class="fas fa-arrow-up"></i><span class="pluse_1"></span><span
             class="pluse_2"></span></a>
     <!-- scrollToTop ending here -->
-
-
-
-
 
     <!-- vendor plugins -->
     <script src="assets/js/jquery-3.6.0.min.js"></script>
@@ -1035,6 +1042,7 @@
     <script src="assets/js/jquery.counterup.min.js"></script>
     <script src="assets/js/wow.js"></script>
     <script src="assets/js/custom.js"></script>
+    <script src="assets/js/form.js"></script>
 </body>
 
 </html>
