update header icons

--- a/index.html
+++ b/index.html
@@ -131,14 +131,16 @@
                         <!-- Menu Bar Toggle -->
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menubar"
                             aria-controls="menubar" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
+                            <!-- <span class="navbar-toggler-icon"></span> -->
+                            <i class="fa-solid fa-bars" ></i>
                         </button>
 
                         <!-- Info Bar Toggle -->
                         <button class="navbar-toggler header__bar-info" type="button" data-bs-toggle="collapse"
                             data-bs-target="#menubar2" aria-controls="menubar2" aria-expanded="false"
                             aria-label="Toggle navigation">
-                            <span class="fas fa-info"></span>
+                            <!-- <span class="fas fa-info"></span> -->
+                            <i class="fa-solid fa-info"></i>
                         </button>
                     </div>
 
