update header icons

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                             <p class="banner-text">Join thousands of devotees in offering prayers to Maa Ambe, the
                                 symbol
                                 of strength and devotion.</p>
-                            <a href="#" class="default-btn move-right"><span class="text-black">Explore more</span></a>
+                            <a href="#services" class="default-btn move-right"><span class="text-black">Explore more</span></a>
                         </div>
                     </div>
                 </div>
@@ -200,7 +200,7 @@
                             <h2 class="banner-text">Discover the Spiritual Essence of Ambaji</h2>
                             <p class="banner-text">Experience divine serenity at Ambaji Temple, a place of worship and
                                 deep spiritual connection.</p>
-                            <a href="#" class="default-btn move-right"><span class="text-black">Explore more</span></a>
+                            <a href="#services" class="default-btn move-right"><span class="text-black">Explore more</span></a>
                         </div>
                     </div>
                 </div>
@@ -212,7 +212,7 @@
                             <h2 class="banner-text">Stay Updated with Ambaji Events</h2>
                             <p class="banner-text">Get updates on festivals, events, and celebrations at Ambaji
                                 throughout the year.</p>
-                            <a href="#" class="default-btn move-right"><span class="text-black">Explore more</span></a>
+                            <a href="#services" class="default-btn move-right"><span class="text-black">Explore more</span></a>
                         </div>
                     </div>
                 </div>
